--- a/CV01.html
+++ b/CV01.html
@@ -61,7 +61,7 @@
                         Tools</a>
                 </li><li class="nav-item dropdown open"><a class="nav-link link text-white dropdown-toggle display-4" href="#top" aria-expanded="true" data-toggle="dropdown-submenu"><span class="mbri-menu mbr-iconfont mbr-iconfont-btn"></span>
                         
-                        Reports</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="Indicators.html#footer6-5f" aria-expanded="false">Indicators</a><a class="text-white dropdown-item display-4" href="reports.html#footer6-1c" aria-expanded="false">Reports</a><a class="text-white dropdown-item display-4" href="#top" aria-expanded="false">Studies</a></div></li><li class="nav-item">
+                        Reports</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="Indicators.html#footer6-5f" aria-expanded="false">Indicators</a><a class="text-white dropdown-item display-4" href="reports.html#footer6-1c" aria-expanded="false">Reports</a><a class="text-white dropdown-item display-4" href="studies.html#menu1-9e" aria-expanded="false">Studies</a></div></li><li class="nav-item">
                     <a class="nav-link link text-white display-4" href="https://mobirise.com">
                         </a>
                 </li>
@@ -83,7 +83,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-6g">
+<section class="engine"><a href="https://mobirise.info/h">create your own web page for free</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-6g">
 
     
 
@@ -107,7 +107,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="IjbotkBrp7Bt8HzKQRGNXYEtBdogF3nIR5b4etDLBwc96yjlfLJ/gMGhVkKT8+sD/jPlrqNOpEAZEgQQ8u1IbP2O3T+d3ITa98sI10+NxPUI2xwUSG/b33GqbFUl7GOe.QDJyZirIRVDBR/vCHUp9EDUxnpdg75UK39xLRDoam50LTnsOZ3n0/x091JbSsgOGGPscTkTFh2xnTseBP434f7YGRXnA6hde1UyCKhXJ3hPvNOIuiILJtoDdA3oJEAwN">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="5sW+H66QB2hIDaKQ7ixrNPz32BmZonxTqNC2J8eI+BWGNmxfknB06tlB7NMVAiDHjvCIaSrmhh7h82MvlNaRI6JhlAV4FTGSSdHOKjmD+MGPb/IOU8AsmVWPkN84Wzbi.0Rd77TtTc2DcqCXHMLo7CLXFWwQH43GiMRrMgFa4hM2YKFgz2FPg2Aaa73fRQ2D2uXWn1NGUdLB4JTy17pOUiR79SLgahoU3BqfCYB6xUbkBM7zDV4aleXCH13/JsklA">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
