--- a/Employment.html
+++ b/Employment.html
@@ -59,7 +59,7 @@
                         Tools</a>
                 </li><li class="nav-item dropdown open"><a class="nav-link link text-white dropdown-toggle display-4" href="#top" aria-expanded="true" data-toggle="dropdown-submenu"><span class="mbri-menu mbr-iconfont mbr-iconfont-btn"></span>
                         
-                        Reports</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="Indicators.html#footer6-5f" aria-expanded="false">Indicators</a><a class="text-white dropdown-item display-4" href="reports.html#footer6-1c" aria-expanded="false">Reports</a><a class="text-white dropdown-item display-4" href="#top" aria-expanded="false">Studies</a></div></li><li class="nav-item">
+                        Reports</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="Indicators.html#footer6-5f" aria-expanded="false">Indicators</a><a class="text-white dropdown-item display-4" href="reports.html#footer6-1c" aria-expanded="false">Reports</a><a class="text-white dropdown-item display-4" href="studies.html#menu1-9e" aria-expanded="false">Studies</a></div></li><li class="nav-item">
                     <a class="nav-link link text-white display-4" href="https://mobirise.com">
                         </a>
                 </li>
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-u">
+<section class="engine"><a href="https://mobirise.info/o">portfolio site templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-u">
 
     
 
@@ -219,7 +219,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="eQ8GElgVfAPwbMohmivDAJuvjpR/fJ5G8tNsFApr2dIQv0GfsiigUG7WsxqBvFiDpKPxiPg05hxtzvQ5Cmw+lrg+Co0DRKqRyvlFm2mvsgiSaBTYn4IbE24Fh8OdF2VI.zB6ndA+iOvYLodeCff/cNZsj8k8txyfty/AlrpAYnMG022rbp7jSUVw8zg0WVmqUkfW5927AGt4L7fhUNhWzdGK0LHz/cFtrMq+vFPKkRAhp6kgN2KqGqw73AcoSIzCV">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="EhcKqRQ4eX0X84qQrB9QdoguFtTy06Ga9LyxezxROOtd9uueALuBciSCVROHESJXoonBevuJZKBqIPR9ZntPI+45iVxwDTERMojUEzXDB1cUIOonRAvQXteydx7ROcdw.KvqRAv6j0DgrQSJjLfYjSq3Nz/QVoj/N3p5xfLQBqWxZ0rFeINGB0WlWnsUF13bJJ0ux/fCAnwH0anbTidO2nWb0qTcXbqrUhSZlPf6wKJ7MCDeJ1fmsf0nCK3h0bEUZ">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -255,7 +255,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="pnVgo8rmvhOVZk8AHWfpuK0yovJBZlT+SG+ZdqxqNRFPDUHohALi+ZoZ882i311QFTJsdskFdtiUn5a35jrguDBR5+RJNAihlT+5aXaB06MDtEd44cui/DQeBNRyt/mY.msieCn769u9zemoJtQTVFsmo0FKKkxH8tS0v1dBdXrmDzY22ECs+HxJjVGMDOcDGfsMQOklvxBifMKccmxnf5mImT3mBOLAYbSYEsa6BVEWUuo+M3GmMhKILPI9Ayq3A">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="v7gp1e1e0CjAQDqSVRXE7ddp9Q6yo6ETnkSQtH6jJmB/nsRCrb2K/0+yK/JP2RxodcebEZd7YTO77BGf1NbSgHuhyIGJnf5ElHHTqowW5EeKZJ5XRHCOwTe0azh1XmEh.4ihXEFaBCbOb9X8VSG58bNuTk2CNWoMkIXDZLO+2reMBkydcfBCndSccKO9lgZzRGLpNVvYiDOdzRLwi+QA9479XlHrZ9SXTJvirLLV+iw/YdpDLHHxWWRttKjSWldEq">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
