--- a/JobAdd.html
+++ b/JobAdd.html
@@ -62,7 +62,7 @@
                         Tools</a>
                 </li><li class="nav-item dropdown open"><a class="nav-link link text-white dropdown-toggle display-4" href="#top" aria-expanded="true" data-toggle="dropdown-submenu"><span class="mbri-menu mbr-iconfont mbr-iconfont-btn"></span>
                         
-                        Reports</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="Indicators.html#footer6-5f" aria-expanded="false">Indicators</a><a class="text-white dropdown-item display-4" href="reports.html#footer6-1c" aria-expanded="false">Reports</a><a class="text-white dropdown-item display-4" href="#top" aria-expanded="false">Studies</a></div></li><li class="nav-item">
+                        Reports</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="Indicators.html#footer6-5f" aria-expanded="false">Indicators</a><a class="text-white dropdown-item display-4" href="reports.html#footer6-1c" aria-expanded="false">Reports</a><a class="text-white dropdown-item display-4" href="studies.html#menu1-9e" aria-expanded="false">Studies</a></div></li><li class="nav-item">
                     <a class="nav-link link text-white display-4" href="https://mobirise.com">
                         </a>
                 </li>
@@ -84,7 +84,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-71">
+<section class="engine"><a href="https://mobirise.info/q">free responsive web templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-71">
 
     
 
@@ -108,7 +108,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Wt+Se75EI3J/LNkLALQkDxjuLPj/N7ZRcZ9DUJXy23YPiaL0lFkwArxjT9UWu+tk7WKfMylqi3g2mPBXQivIDSCUcB7BxV9lprNWcadIkxKgs8/kgXz3ip2eISTOVOgo.nxsLA8VUc2A76wWrtr5YNFzli8GTTpQDbqRfeYlUl1YKzfhxMQ7KyM10UE3Ddf/b4hPwrPzxJeNhVtX39zsMR4tQr2nTM+1BYWzrKvzsNJOpH7OHFDZFgDYOMqGxO2w8">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="cPXrO+S1qMNiGty0W8Jd/FXZJIWb1+qx9Tl0DjSDRWdXjzwUcTFNy2lsKXgw6PQDfW8OYLm17g95hT+P0GNuj+/FwRiJH7fXVWaY6VDWDRkrcrulDT3YBe50N7rOjrPU.ZUk/R8zDWNhw837FBD+894hkCkVs8yaqT2mAGQ46zhe0k2ske64vNYnCWNmyACtoeX9edgjtEjthbNZElqnVfwpFvg6b6v1TQ3NJgtMecEcZdWkQV/tr86EVSc9YU1HB">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
