--- a/JobSearch.html
+++ b/JobSearch.html
@@ -62,7 +62,7 @@
                         Tools</a>
                 </li><li class="nav-item dropdown open"><a class="nav-link link text-white dropdown-toggle display-4" href="#top" aria-expanded="true" data-toggle="dropdown-submenu"><span class="mbri-menu mbr-iconfont mbr-iconfont-btn"></span>
                         
-                        Reports</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="Indicators.html#footer6-5f" aria-expanded="false">Indicators</a><a class="text-white dropdown-item display-4" href="reports.html#footer6-1c" aria-expanded="false">Reports</a><a class="text-white dropdown-item display-4" href="#top" aria-expanded="false">Studies</a></div></li><li class="nav-item">
+                        Reports</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="Indicators.html#footer6-5f" aria-expanded="false">Indicators</a><a class="text-white dropdown-item display-4" href="reports.html#footer6-1c" aria-expanded="false">Reports</a><a class="text-white dropdown-item display-4" href="studies.html#menu1-9e" aria-expanded="false">Studies</a></div></li><li class="nav-item">
                     <a class="nav-link link text-white display-4" href="https://mobirise.com">
                         </a>
                 </li>
@@ -84,7 +84,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-6w">
+<section class="engine"><a href="https://mobirise.info/k">how to develop free website</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-6w">
 
     
 
@@ -108,7 +108,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="p1bcaIp/KHMdDhvf5n6kI5jLOmPuBA/QpalsT8O5FAM5779YOKJfW7MMN3TppJ7217RbIgaJJ/A+RR++Gxq9A6e+sm64096OeHPhyVVg32ZlUZO5dEUqLnLXVuL4sSZ+.jVoVl+oez8MpLKVxmnYQGLsJcPHPxJcMPOr1J3gnid2urzHjeU0eSad9ljzqIQamf4UfJmuNl5GPJDDsO08yTImpu9MO20jyXD9cZdQA/oZod9Fh5M0XHnGs0em6mFuR">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="AaPfAJvF6+mcsnxWYGgq2+ZRoyBY/Qo+MqiEL8QaYfrtEGvD3IromypGWt4zunvGyp2FFwDDFAwl/8+dHD1z7oODl2JEI7n0/GH7/iXAENCYeX0mH4I6mPUdYwdyCGOP.njzIF2wmUtSkNpzCDGazo8HTTviAohV1jmwa8nDOfANcaanYCH+mcqrJX7RYe4fxaXpQq5/RW/jrvZ1a1c8WhCyYlyxSSHOHUvzIiOw5S071pCnCrdBO2Wnv+TvhPZqs">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
