--- a/RegOrg.html
+++ b/RegOrg.html
@@ -60,7 +60,7 @@
                         Tools</a>
                 </li><li class="nav-item dropdown open"><a class="nav-link link text-white dropdown-toggle display-4" href="#top" aria-expanded="true" data-toggle="dropdown-submenu"><span class="mbri-menu mbr-iconfont mbr-iconfont-btn"></span>
                         
-                        Reports</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="Indicators.html#footer6-5f" aria-expanded="false">Indicators</a><a class="text-white dropdown-item display-4" href="reports.html#footer6-1c" aria-expanded="false">Reports</a><a class="text-white dropdown-item display-4" href="#top" aria-expanded="false">Studies</a></div></li><li class="nav-item">
+                        Reports</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="Indicators.html#footer6-5f" aria-expanded="false">Indicators</a><a class="text-white dropdown-item display-4" href="reports.html#footer6-1c" aria-expanded="false">Reports</a><a class="text-white dropdown-item display-4" href="studies.html#menu1-9e" aria-expanded="false">Studies</a></div></li><li class="nav-item">
                     <a class="nav-link link text-white display-4" href="https://mobirise.com">
                         </a>
                 </li>
@@ -82,14 +82,14 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html web templates</a></section><section class="form cid-rDpy57lQcn" dir="rtl" id="formbuilder-6d">
+<section class="engine"><a href="https://mobirise.info/m">free website design templates</a></section><section class="form cid-rDpy57lQcn" dir="rtl" id="formbuilder-6d">
     
     <div class="mbr-overlay"></div>
     <div class="container">
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="JwfhgKTXD8TwP+EOf5CBFIa6x6MPFRnEx6zgYXSqcPWPjAPfMQJgtg8Ouz7zP9oeyKxKFdwFrgdYzlSXIp/lmb5JWqRKrkY6F+rket1QaX5tcsvwqoRwfJS9oiYccFPm.YAaJaf7AU2dvHal0pjrADA9uiFunIcSx9x5vWck3b59ACOJEotlf7068vK9lLncQjXn5a8xnK1DkyURpFaQH8TBQADYWvn/ASaHHkNNBLS/RluO14vBU8dYcHqafDONx">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="zrWausVcdRkNTsm2ORlPRQoFbZuM9Emv9wFN0zb8FbYNukOBlfZ3935XS3O5c328sid+HVLsk29e9M3JReLVukJ3XNe7cAuFjnRFJvTVDjdDJ0Tf2xl/no5jXdsppakJ.YAeDsrKI2o5Jk3/y4lYD/CWG9qUZxzYf/l739lBiDg9NQLnFi3e2Gb9LneX1vh2OgfkzavrsO6Y+pUuV0RXkjl/kqUrStIt5REjsrz0ScO3mLi5m5LEi/+oLWCfQ+ERY">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">saved</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
