--- a/RegUser.html
+++ b/RegUser.html
@@ -60,7 +60,7 @@
                         Tools</a>
                 </li><li class="nav-item dropdown open"><a class="nav-link link text-white dropdown-toggle display-4" href="#top" aria-expanded="true" data-toggle="dropdown-submenu"><span class="mbri-menu mbr-iconfont mbr-iconfont-btn"></span>
                         
-                        Reports</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="Indicators.html#footer6-5f" aria-expanded="false">Indicators</a><a class="text-white dropdown-item display-4" href="reports.html#footer6-1c" aria-expanded="false">Reports</a><a class="text-white dropdown-item display-4" href="#top" aria-expanded="false">Studies</a></div></li><li class="nav-item">
+                        Reports</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="Indicators.html#footer6-5f" aria-expanded="false">Indicators</a><a class="text-white dropdown-item display-4" href="reports.html#footer6-1c" aria-expanded="false">Reports</a><a class="text-white dropdown-item display-4" href="studies.html#menu1-9e" aria-expanded="false">Studies</a></div></li><li class="nav-item">
                     <a class="nav-link link text-white display-4" href="https://mobirise.com">
                         </a>
                 </li>
@@ -82,14 +82,14 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop own website</a></section><section class="form cid-rDpy93NEgi" dir="rtl" id="formbuilder-6e">
+<section class="engine"><a href="https://mobirise.info/c">free website builder</a></section><section class="form cid-rDpy93NEgi" dir="rtl" id="formbuilder-6e">
     
     <div class="mbr-overlay"></div>
     <div class="container">
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="nWLFAbnkNKjZIei3ttSG7VBfRTV/2b+vtuqhWZMs3qVu0vnNAsAsEvDfVhmoneCikaVLkuHOyuHam2WgKhCCnExSo0O5U5Bn7BUGSDgFGeE+BkJzZv+NP/aasWOj5xGn.hxacgCvSiu4Dd3hI+EtU3HjF/7XLPz22mwPeTxe7z/psp/9y2a1SHcM2DCTBvHjS7lagNTSAkbbObpEahHXdShmaStK89ZyDPvNWN0FYaC59WD0Nu7CcUTCWqTQ5Mqdg">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="OvIAQTv5fgYnTHhg9ZpcTZQ06FMI+npkbxg/oyk3J1xekbTDGCJmH2sh1+mRQUZkAC6y8g6FCggtpwsEq+TpZ7beutUR5iub6htu5rmu2ExPeHG98WQZvLxHvYjDKTfP.POc7pVDGsjUORnXWW92CSTAdqPRm8ZAp0s7j5OWaLGcXJFgZ9h3vTQz3c7ZIOJXozpFlP2aOX0c/39Xdih6zjaI0PVne1WNBDfcV0e7fUkZB/J/Rqe/R0l1TKa/7Odhp">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">saved</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
