--- a/SchoolToLaborForm.html
+++ b/SchoolToLaborForm.html
@@ -61,7 +61,7 @@
                         Tools</a>
                 </li><li class="nav-item dropdown open"><a class="nav-link link text-white dropdown-toggle display-4" href="#top" aria-expanded="true" data-toggle="dropdown-submenu"><span class="mbri-menu mbr-iconfont mbr-iconfont-btn"></span>
                         
-                        Reports</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="Indicators.html#footer6-5f" aria-expanded="false">Indicators</a><a class="text-white dropdown-item display-4" href="reports.html#footer6-1c" aria-expanded="false">Reports</a><a class="text-white dropdown-item display-4" href="#top" aria-expanded="false">Studies</a></div></li><li class="nav-item">
+                        Reports</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="Indicators.html#footer6-5f" aria-expanded="false">Indicators</a><a class="text-white dropdown-item display-4" href="reports.html#footer6-1c" aria-expanded="false">Reports</a><a class="text-white dropdown-item display-4" href="studies.html#menu1-9e" aria-expanded="false">Studies</a></div></li><li class="nav-item">
                     <a class="nav-link link text-white display-4" href="https://mobirise.com">
                         </a>
                 </li>
@@ -83,7 +83,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6n">
+<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6n">
 
     
 
@@ -107,7 +107,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Uoxgqrj6b3e8f2P15sZ8C4pFEcCM0spB2jntcVlrX2Fv7kjN61GB3DdmBRkoHU8m78Gt+S8Ae2lZCL9hqqUi2EwXIJKy2VnInhmirCQU6NyQGaRRXobK0LGTKIVdYrT7.EZ3fZT2/PDmP/mqzFcifqdHiZzWw50RHPvLHpy1tir/+97s1Z/WxUs1rfIRyCMRNKWj/Sx5zvzLr4i1jY6ZE/rUpJQfqH1k9NUY0jP9A5lHmx8R8pE637lUGaFVpXOJ0">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="mM46+SARhfMAD8Qk0P73lt7ooP3nfSSrBPdA/eZmRde2KS/zmGTgUNWnrwEn6pv/EGLDDlDgqhUaXbLAkPvlmXY71RfFjv8l52VUigRcQFll+6EUNOGbtp3838OtWJLI.IsWbaL2fzbxVwkILDfTIR5hLYC9aV2JY43sDELXTlcOPfj8PAlzGqAmCU3g+2VgLqbUyMSS9ptMO/eSm6TI/x7U9KdpIEnM+xUGc5dWGHrj/2adbfX2j2eA2QcD3QQCa">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
