--- a/SelfAsses.html
+++ b/SelfAsses.html
@@ -61,7 +61,7 @@
                         Tools</a>
                 </li><li class="nav-item dropdown open"><a class="nav-link link text-white dropdown-toggle display-4" href="#top" aria-expanded="true" data-toggle="dropdown-submenu"><span class="mbri-menu mbr-iconfont mbr-iconfont-btn"></span>
                         
-                        Reports</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="Indicators.html#footer6-5f" aria-expanded="false">Indicators</a><a class="text-white dropdown-item display-4" href="reports.html#footer6-1c" aria-expanded="false">Reports</a><a class="text-white dropdown-item display-4" href="#top" aria-expanded="false">Studies</a></div></li><li class="nav-item">
+                        Reports</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="Indicators.html#footer6-5f" aria-expanded="false">Indicators</a><a class="text-white dropdown-item display-4" href="reports.html#footer6-1c" aria-expanded="false">Reports</a><a class="text-white dropdown-item display-4" href="studies.html#menu1-9e" aria-expanded="false">Studies</a></div></li><li class="nav-item">
                     <a class="nav-link link text-white display-4" href="https://mobirise.com">
                         </a>
                 </li>
@@ -83,7 +83,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build a site</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-6j">
+<section class="engine"><a href="https://mobirise.info/c">free web builder</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-6j">
 
     
 
@@ -107,7 +107,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="1SZp7T2E3vfFEi0ULgvnDp+K3VtshJd5srNgrjtSZSk3eH4U35HLxlIS8gMVgelCN62j3inB9q9ym7HNfCecy36TJhWmNAEq6LnJgDw68BzwmRX1zM5nkKwlKeKg0bkY.pYE4AbRVcYvo9DJsDGFe1XxALrzfGzuJ8I4sqLKagXZwxcXOjJU7k6R6BXJ7hG5bXx3+QSO//hXDID+awdfLM2NnUWDrgq8E2KDCHL+TXyQvQNqA79BR6uV51VMrmWJU">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="w3/Gp7smpVGRnf+KzuluqWGc4V8HH/TH++V29KiRkn72S+nYEnmiamiFlh9ne31ztKKWzcBavtjGiKMsg4JYnTx5zG+GWfOc5b81Q+RMpLt7AVkY9WV+G5bEJWEdwGLa.Lzy5Tc0xV85cFUNocZ5FNV+CeJjNOktJPNTjvKTd9/w+j8pNQrs3z/0BUHlU0EgTMXJy2bBTdOxstIXKTNyl/uNkHUsnzJNzcwL5BcgwB6jq68OMdEBfy+zZzyktHTxc">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
