--- a/TrainingProviders.html
+++ b/TrainingProviders.html
@@ -62,7 +62,7 @@
                         Tools</a>
                 </li><li class="nav-item dropdown open"><a class="nav-link link text-white dropdown-toggle display-4" href="#top" aria-expanded="true" data-toggle="dropdown-submenu"><span class="mbri-menu mbr-iconfont mbr-iconfont-btn"></span>
                         
-                        Reports</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="Indicators.html#footer6-5f" aria-expanded="false">Indicators</a><a class="text-white dropdown-item display-4" href="reports.html#footer6-1c" aria-expanded="false">Reports</a><a class="text-white dropdown-item display-4" href="#top" aria-expanded="false">Studies</a></div></li><li class="nav-item">
+                        Reports</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="Indicators.html#footer6-5f" aria-expanded="false">Indicators</a><a class="text-white dropdown-item display-4" href="reports.html#footer6-1c" aria-expanded="false">Reports</a><a class="text-white dropdown-item display-4" href="studies.html#menu1-9e" aria-expanded="false">Studies</a></div></li><li class="nav-item">
                     <a class="nav-link link text-white display-4" href="https://mobirise.com">
                         </a>
                 </li>
@@ -84,7 +84,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section once="footers" class="cid-rDq2pXwqU5" id="footer6-7g">
+<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section once="footers" class="cid-rDq2pXwqU5" id="footer6-7g">
 
     
 
@@ -108,7 +108,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="QN1U/xkoAkOP88aF/5nHTP3r3xmjIqC+bwSO5NSOFdofNVEjDuEHp+9ndwFt7hzR7yuCeqyPgWNmv1otpEMpCeHB8+dvLG+KHBnD76yLoXRrsl4YGtqqt0ds9eJndynG.Edqmz5lnSepY9F0yFE+13T0nJH2VpC18LPEaXsHPdQ7cP5IoIZ57oOsMITazjf2iNXaRWuzJ+auFMJwFWLAm43JSJ0+jt4Vb1ewyZ0AG6mTUPt/W1IkN7HDIB6WuXliq">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="r6R+bfnhMKP7EnOpGB9KibjDji4OcPkhdA9cBO37X0D7I75p4KZT3OrHmqcmZrjGc+ZoHo5qfM8Azjst2FaVikDpHRuHVVSAVUxw0eeGdUwGkCF6LvFc1hSpSltNQs30.p/UVbziYFwMAglE6HhazLf+HDmbAXNULVvQ6/ZDvjdtfiASQMCRxqJbUP6Jcy4W+SBXPPv7NLUPClSbFz7MqJUzxj19k0fdM+HAEokUfaY8/ciE1kSKfJZ0UexZ24Oz2">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
