--- a/TrainingSearch.html
+++ b/TrainingSearch.html
@@ -61,7 +61,7 @@
                         Tools</a>
                 </li><li class="nav-item dropdown open"><a class="nav-link link text-white dropdown-toggle display-4" href="#top" aria-expanded="true" data-toggle="dropdown-submenu"><span class="mbri-menu mbr-iconfont mbr-iconfont-btn"></span>
                         
-                        Reports</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="Indicators.html#footer6-5f" aria-expanded="false">Indicators</a><a class="text-white dropdown-item display-4" href="reports.html#footer6-1c" aria-expanded="false">Reports</a><a class="text-white dropdown-item display-4" href="#top" aria-expanded="false">Studies</a></div></li><li class="nav-item">
+                        Reports</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="Indicators.html#footer6-5f" aria-expanded="false">Indicators</a><a class="text-white dropdown-item display-4" href="reports.html#footer6-1c" aria-expanded="false">Reports</a><a class="text-white dropdown-item display-4" href="studies.html#menu1-9e" aria-expanded="false">Studies</a></div></li><li class="nav-item">
                     <a class="nav-link link text-white display-4" href="https://mobirise.com">
                         </a>
                 </li>
@@ -83,7 +83,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
+<section class="engine"><a href="https://mobirise.info/e">how to make your own website</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
 
     
 
@@ -107,7 +107,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="bKiJmd/7nhNyb/xtHOjAcX5x8ozGAitnNARZarl6Nv82jxe1CaMNVVfcrZ6dtdAZrMW/y2wYAKdv6zNy8vG4jEhaYHF3gh+W6DrxkVoxypPQYvr5rY/taWo2LfikIuSq.p90EPWeaeALZThW2ySP6bICvigFDqx1n852eyXY7JIUnqiNO6UY0QojrUaUmmR1z4foFV3eY3go53l/K9LplxBv7nJ9FLEqhVZZbmVTo2uGmCglz6/IHd5ikAC+cxypJ">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="2flYGLJlYf8eYd7ZPbS7E0UQEWXpNcBHMhKQjOylavTgLUXRuJBgf2YFEfSoF3eT08ruOELYfLHYRyNvVLIcsQ9ifMvw/Yxk8QpT14jfqbxqR9/AhHO8gaTD3G/mnYhb.1+uxvMpxKB/fC65FQfP9f7PSk5VbEeHaMfcOOcMyO278LUdIdBbzQ/MqYQ5rU8NfgZHdyb6DfeqLsB9uXeXAmVHfdlvv5T163zzQsRtMUZMJWRBMOQfmaL8lciMrJ01J">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
